<resources>
    <string name="app_name">getting back into it</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="have_an_account_log_in">Have an account? Log In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
</resources>